<resources>
    <string name="app_name">medum</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="hintusername">Nombre de usuario</string>
    <string name="hintpassword">Contraseña</string>
    <string name="buttonlogin">Login</string>
    <string name="dontaccount">No tienes cuenta?, </string>
    <string name="createaccount">crea una aquí</string>
    <string name="hintmail">Correo</string>
    <string name="hintname">Nombre</string>
    <string name="hintuser">Usuario</string>
    <string name="hintrepeatpassword">Confirmar contraseña</string>
    <string name="buttonjoin">Unete</string>
    <string name="toolbartittle">Crear cuenta</string>
    <string name="description">532m^2 - 5 recamaras - Patio</string>
    <string name="buscar_tab">Buscar</string>
    <string name="fav_tab">Favoritos</string>
    <string name="home_tab">Inicio</string>
    <string name="profile_tab">Perfil</string>
    <string name="house_prompt">Que deseas vender?</string>
    <string name="facebook_app_id">1662964674007272</string>
    <string name="fb_login_protocol_scheme">fb1662964674007272</string>


    <array name="typehouses">
        <item>Casa</item>
        <item>Departamento</item>
        <item>Terreno</item>
        <item>Loft</item>
    </array>

    <array name="type">
        <item>Renta</item>
        <item>Venta</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Chito bb</string>
    <string name="transition_picture">transition_picture</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="hintlastname">Apellidos</string>
    <string name="title_activity_maps">Map</string>

    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="start">Entendido</string>

    <string name="slide_1_title">Bienvenido a medum!</string>
    <string name="slide_1_desc">La forma mas sencilla de buscar una casa</string>

    <string name="slide_2_title">Donde mas te guste</string>
    <string name="slide_2_desc">Sin importar donde estes encuentra una casa a tu alrededor</string>

    <string name="slide_3_title">Nos preocupa tu seguridad</string>
    <string name="slide_3_desc">Contamos con tramitadores certificados por la AMPI y nosotros, por lo que tu casa esta en buenas manos</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    //Settings
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
</resources>
