<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.medum.medum.LoginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">
            <ImageView
                android:id="@+id/Logo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/medum"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/paddinghorlogin">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Edittextwhite"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintusername"
                        android:drawableLeft="@drawable/create_user"
                        android:drawableStart="@drawable/create_user"
                        android:drawableTint="@android:color/white"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Edittextwhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintpassword"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/create_password"
                        android:drawableStart="@drawable/create_password"
                        android:drawableTint="@android:color/white"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonlogin"
                    android:theme="@style/RaisedButtonDark" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/loginG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_alignTop="@+id/login"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    />

                <Button
                    android:id="@+id/loginFB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonlogin"
                    android:theme="@style/RaisedButtonFB"
                    android:onClick="Login"
                    android:drawableLeft="@drawable/facebook"
                    android:drawableStart="@drawable/facebook"
                    android:drawableTint="@android:color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dontaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dontaccount"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/createaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createaccount"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_toRightOf="@id/dontaccount"
                        android:onClick="goCreateAccount"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>