<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.medum.medum.view.CreateAccountActivity">

<include layout="@layout/actionbar_toolbar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            android:weightSum="1"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2">
                <ImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:src="@drawable/account"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EdittextDark"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintmail"
                        android:imeOptions="actionNext"
                        android:drawableLeft="@drawable/create_mail"
                        android:drawableStart="@drawable/create_mail"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EdittextDark"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintpassword"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        android:drawableLeft="@drawable/create_password"
                        android:drawableStart="@drawable/create_password"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/join"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonjoin"
                    android:theme="@style/RaisedButtonDark"/>


            </LinearLayout>


           <!-- <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EdittextDark"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintname"
                    android:imeOptions="actionNext"
                    android:drawableLeft="@drawable/create_user"
                    android:drawableStart="@drawable/create_user"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EdittextDark"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintlastname"
                    android:imeOptions="actionNext"
                    android:drawableLeft="@drawable/create_user"
                    android:drawableStart="@drawable/create_user"/>

            </android.support.design.widget.TextInputLayout>-->

           <!-- <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EdittextDark"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/repeatpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:hint="@string/hintrepeatpassword"
                    android:drawableLeft="@drawable/create_password"
                    android:drawableStart="@drawable/create_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>-->

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>